objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Non Conformance Report</fullName>
        <description>Non Conformance Report</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Concluded</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sample Request</fullName>
        <description>Sample Request Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned to warehouse</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Not Available</fullName>
        </values>
        <values>
            <fullName>Ordered</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sent</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Technical Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Client Review</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Temporary Product</fullName>
        <description>Process for Temporary product creation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ABCRating__c</fullName>
        <description>Formula field to reflect the ABC Rating of the Account associated to this Case.</description>
        <formula>TEXT(Account.ABCRating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What&apos;s the ABC rating of the Account associated to this case?</inlineHelpText>
        <label>ABC Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionTaken__c</fullName>
        <description>Details of the Planned Action on Case
[JEBU/SF] Changed type from Text(255) to Long Text (32000) per SFDP-1916</description>
        <inlineHelpText>Define actions already taken and proposed actions</inlineHelpText>
        <label>Action Taken / Proposed Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActualTime__c</fullName>
        <label>Actual Time</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffectedQuantity__c</fullName>
        <description>Needed for NCR</description>
        <label>Affected Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeCity__c</fullName>
        <description>Used for sample requests
JEBU/SF/11-DEC-18/Changed length from 25 &gt; 100</description>
        <label>Alternative City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeCountry__c</fullName>
        <description>Used for sample requests</description>
        <label>Alternative Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinalCountries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlternativePostalCode__c</fullName>
        <description>Used for sample requests
JEBU/SF/11-DEC-18/Changed length from 12 &gt; 30</description>
        <label>Alternative Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeState__c</fullName>
        <description>Used for sample requests
JEBU/SF/11-DEC-18/Changed length from 25 &gt; 50</description>
        <label>Alternative State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeStreet__c</fullName>
        <description>Used for sample requests
JEBU/SF/11-DEC-18/Changed length from 40 &gt; 255</description>
        <label>Alternative Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <formula>QuoteLine__r.Application__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedSampleStore__c</fullName>
        <label>Assigned Sample Store</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SampleStores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attributed__c</fullName>
        <label>Attributed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communication External</fullName>
                </value>
                <value>
                    <fullName>Communication Internal</fullName>
                </value>
                <value>
                    <fullName>Delivery timing</fullName>
                </value>
                <value>
                    <fullName>Incorrect Batch Sent</fullName>
                </value>
                <value>
                    <fullName>Incorrect Documents</fullName>
                </value>
                <value>
                    <fullName>Incorrect Label / Markings</fullName>
                </value>
                <value>
                    <fullName>Incorrect Pricing</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product</fullName>
                </value>
                <value>
                    <fullName>Incorrect Quantity</fullName>
                </value>
                <value>
                    <fullName>Missing CoA</fullName>
                </value>
                <value>
                    <fullName>Missing Documents (other than CoA)</fullName>
                </value>
                <value>
                    <fullName>Non respect of Requirements</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Packaging Damaged</fullName>
                </value>
                <value>
                    <fullName>Packaging Poor/Dirty</fullName>
                </value>
                <value>
                    <fullName>Procedural Error</fullName>
                </value>
                <value>
                    <fullName>Product expired</fullName>
                </value>
                <value>
                    <fullName>Product other impurities</fullName>
                </value>
                <value>
                    <fullName>Product out of specifications</fullName>
                </value>
                <value>
                    <fullName>Working environment - accident</fullName>
                </value>
                <value>
                    <fullName>Working environment - near-miss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BinText__c</fullName>
        <inlineHelpText>Used to hold BIN information on NCR when the NCR is not linked to an order. For migration purposes.</inlineHelpText>
        <label>Bin Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <formula>TEXT(Account.ImcdBusinessUnit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarrierIdLocal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manual Product Field for users in countries with Local ERP.</description>
        <label>Carrier Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Carrier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Carrier Name)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CarrierId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A look up to Account with a filter type Carrier</description>
        <label>Carrier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>CasesCarrier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CarrierName__c</fullName>
        <description>Carrier&apos;s name</description>
        <formula>CarrierId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Which carrier is used for this order?</inlineHelpText>
        <label>CarrierName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrderLineBatch__c</fullName>
        <description>Batch number for the Sales or Purchase Order Line</description>
        <formula>IF (
            NOT ( ISBLANK ( SalesOrderLine__c ) )
            , SalesOrderLine__r.LotNumber__c
            , IF (
            NOT ( ISBLANK ( PurchaseOrderLine__c ) )
            , &apos;&apos;
            , &apos;&apos; )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Line Batch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrderLineCustomerPo__c</fullName>
        <description>Sales Order Line Customer PO number</description>
        <formula>IF (
            NOT ( ISBLANK ( SalesOrderLine__c ) )
            , SalesOrderLine__r.CustomerPO__c
            , IF (
            NOT ( ISBLANK ( PurchaseOrderLine__c ) )
            , &apos;&apos;
            , &apos;&apos;
            )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Line Customer PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrderLinePackageDescription__c</fullName>
        <description>Package description for the Sales or Purchase Order line</description>
        <formula>IF (
            NOT ( ISBLANK ( SalesOrderLine__c ) )
            , SalesOrderLine__r.Product__r.PackageDescription__c
            , IF (
            NOT ( ISBLANK ( PurchaseOrderLine__c ) )
            , PurchaseOrderLine__r.Product__r.PackageDescription__c
            , &apos;&apos; )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Line Package Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrderLinePrincipalId__c</fullName>
        <formula>IF ( 
NOT ( ISBLANK ( SalesOrderLine__c ) ) 
, SalesOrderLine__r.Product__r.Principal__c
, IF ( 
NOT ( ISBLANK ( PurchaseOrderLine__c ) ) 
, PurchaseOrderLine__r.Product__r.Principal__c
, &apos;&apos; ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Line Principal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrderLinePrincipal__c</fullName>
        <formula>IF (
				NOT ( ISBLANK ( SalesOrderLine__c ) )
				, SalesOrderLine__r.Product__r.Principal__r.Name
				, IF (
								NOT ( ISBLANK ( PurchaseOrderLine__c ) )
								, PurchaseOrderLine__r.Product__r.Principal__r.Name
								, &apos;&apos; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Line Principal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrderLineProductId__c</fullName>
        <formula>IF (
NOT ( ISBLANK ( SalesOrderLine__c ) )
, SalesOrderLine__r.Product__c
, IF (
NOT ( ISBLANK ( PurchaseOrderLine__c ) )
, PurchaseOrderLine__r.Product__c
, &apos;&apos; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Line Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrderLineProduct__c</fullName>
        <description>Returns the Product from either the Sales Order or Purchase Order line</description>
        <formula>IF (
            NOT ( ISBLANK ( SalesOrderLine__c ) )
            , SalesOrderLine__r.Product__r.Name
            , IF (
            NOT ( ISBLANK ( PurchaseOrderLine__c ) )
            , PurchaseOrderLine__r.Product__r.Name
            , &apos;&apos; )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Line Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrderLineQuantity__c</fullName>
        <description>Quantity fro Sales Order LIne</description>
        <formula>IF (
            NOT ( ISBLANK ( SalesOrderLine__c ) )
            , TEXT ( SalesOrderLine__r.QtyOrdered__c )
            , IF (
            NOT ( ISBLANK ( PurchaseOrderLine__c ) )
            , &apos;&apos;
            , &apos;&apos;
            )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Line Quantity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimIssued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClaimSetlled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Setlled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <description>Value of Compensation in Local Currency Terms</description>
        <label>Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CorrectProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please indicate the existing Product the Sales Rep should use to replace the Temporary Product.</inlineHelpText>
        <label>Correct Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Correct Product)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CorrectiveActionsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Actions Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correctiveactions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostofGoods__c</fullName>
        <label>Cost of Goods</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costs_of_Handling__c</fullName>
        <label>Costs of Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerNCRReference__c</fullName>
        <label>Customer NCR Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerOrderReference__c</fullName>
        <label>Customer Order Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateSent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DispositionDate__c</fullName>
        <label>Disposition date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environmental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstimatedDate__c</fullName>
        <label>Estimated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalComments__c</fullName>
        <description>Field used for external comments on the Sample request document</description>
        <label>External Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FeedSafety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feed Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinalDecisionMadeBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Decision Made By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinalDispositionOfMaterial__c</fullName>
        <label>Final Disposition of Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blend into tank</fullName>
                </value>
                <value>
                    <fullName>Extended shelf life</fullName>
                </value>
                <value>
                    <fullName>Give away</fullName>
                </value>
                <value>
                    <fullName>Return to supplier</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Sell &quot;as is&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FoodSafety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormulatedSampleComment__c</fullName>
        <label>Formulated Sample Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FormulatedSampleRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lab to provide sample to customer after finalising Technical request</description>
        <inlineHelpText>Lab to provide sample to customer after finalising Technical request</inlineHelpText>
        <label>Formulated Sample required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthSafety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health &amp; Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HelixId__c</fullName>
        <description>HelixID for cases</description>
        <externalId>true</externalId>
        <label>HelixId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ICNCRReference__c</fullName>
        <description>Reference for IC NCR</description>
        <label>IC NCR Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDCompany__c</fullName>
        <inlineHelpText>Leaving this field empty, will automatically copy the IMCD Company value from the Account.</inlineHelpText>
        <label>IMCD Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDCompany</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImcdCompanyLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to get Imcd Company information - Address, Currency..</description>
        <label>Imcd Company Lookup</label>
        <referenceTo>ImcdCompany__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalComments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsoManagementRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Iso Management Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeyIndicator__c</fullName>
        <formula>IF(RelatedOpportunity__r.Key_Opportunity__c=true, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <label>LOB1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB2__c</fullName>
        <label>LOB2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB1__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>LOB2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB3__c</fullName>
        <label>LOB3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>LOB3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastAssignedQueue__c</fullName>
        <label>Last Assigned Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiteratureRequest__c</fullName>
        <label>Literature Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>MSDS</fullName>
                </value>
                <value>
                    <fullName>Technical Datasheet</fullName>
                </value>
                <value>
                    <fullName>Certificate of Analysis</fullName>
                </value>
                <value>
                    <fullName>Nutritional</fullName>
                </value>
                <value>
                    <fullName>Allergen</fullName>
                </value>
                <value>
                    <fullName>Kosher / Halal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LotText__c</fullName>
        <description>Field to hold Lot information for NCRs not related to orders. Used for migration.</description>
        <label>Lot Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MissingInfo__c</fullName>
        <formula>IF(

            ISBLANK(ShiptoAddress__c ) &amp;&amp;
            Not(UseMainAddress__c) &amp;&amp;
            OR(ISBLANK(AlternativeCity__c),
            ISBLANK(Text(AlternativeCountry__c)),
            ISBLANK(AlternativePostalCode__c),
            ISBLANK(AlternativeStreet__c)
            )
            ,
            IMAGE(&apos;/resource/Incomplete&apos;, &apos;Complete this section&apos; ),
            IMAGE(&apos;/resource/Complete&apos;, &apos;Section Complete&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCRCause__c</fullName>
        <label>NCR Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>External - Carrier</fullName>
                </value>
                <value>
                    <fullName>External - Customer</fullName>
                </value>
                <value>
                    <fullName>External - Principal</fullName>
                </value>
                <value>
                    <fullName>External - Supplier</fullName>
                </value>
                <value>
                    <fullName>External - Warehouse</fullName>
                </value>
                <value>
                    <fullName>IMCD Sister company</fullName>
                </value>
                <value>
                    <fullName>Internal - Commercial</fullName>
                </value>
                <value>
                    <fullName>Internal - Customer Service</fullName>
                </value>
                <value>
                    <fullName>Internal - Finance</fullName>
                </value>
                <value>
                    <fullName>Internal - HSEQ</fullName>
                </value>
                <value>
                    <fullName>Internal - Internal Sales</fullName>
                </value>
                <value>
                    <fullName>Internal - IT</fullName>
                </value>
                <value>
                    <fullName>Internal - Logistics</fullName>
                </value>
                <value>
                    <fullName>Internal - Warehouse</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityOwner__c</fullName>
        <formula>RelatedOpportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; RelatedOpportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <formula>TEXT(RelatedOpportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityValue__c</fullName>
        <formula>TEXT(RelatedOpportunity__r.Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderAddressKey__c</fullName>
        <description>Returns the Sales order key or Purchase order key</description>
        <formula>IF ( NOT ( ISBLANK(SalesOrder__c) ),  SalesOrder__r.OrderAddressKey__c,
            IF ( NOT ( ISBLANK (Purchase_Order__c) ),  Purchase_Order__r.PO_HeaderKey__c, &apos;&apos; )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Address Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCosts__c</fullName>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PharmaSafety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharma Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlannedResolutionDate__c</fullName>
        <description>Estimated resolution date</description>
        <label>Planned Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreventiveActionsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preventive Actions Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreventiveActions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preventive Actions</description>
        <inlineHelpText>Are preventive actions identified</inlineHelpText>
        <label>Preventive Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrincipalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You have to select a global principal record.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Principal_Global</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processesinvolved__c</fullName>
        <label>Processes involved</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BP01BusinessDevelopment</fullName>
                    <label>BP01 Business Development</label>
                </value>
                <value>
                    <fullName>BP02 Pre Sales</fullName>
                </value>
                <value>
                    <fullName>BP03 Sales Process</fullName>
                </value>
                <value>
                    <fullName>BP04 Master Data Management</fullName>
                </value>
                <value>
                    <fullName>BP05 Supply Chain Management</fullName>
                </value>
                <value>
                    <fullName>BP06 Sample Fulfilment</fullName>
                </value>
                <value>
                    <fullName>BP07 Lab Support</fullName>
                </value>
                <value>
                    <fullName>BP08 Finance</fullName>
                </value>
                <value>
                    <fullName>BP09 Procurement</fullName>
                </value>
                <value>
                    <fullName>BP10 After Sales</fullName>
                </value>
                <value>
                    <fullName>BP11 HSEQ</fullName>
                </value>
                <value>
                    <fullName>BP12 IT</fullName>
                </value>
                <value>
                    <fullName>BP13 HR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductLocal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manual Product Field for users in countries with Local ERP.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.GroupFlag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Product)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>Product Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductPrincipal__c</fullName>
        <formula>QuoteLine__r.SBQQ__Product__r.Principal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Principal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRecallComments__c</fullName>
        <label>Product Recall Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRecall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Product)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>